FEAT работает регистрация, работа с пациентами, маршруты для согласий, встрчь и бонусов
